--- a/app/assets/javascripts/templates/userList.jst.ejs
+++ b/app/assets/javascripts/templates/userList.jst.ejs
@@ -1,6 +1,6 @@
 <h1>User List</h1>
 <p>
-  <strong><a href="#users/new">Add new user</a></strong>
+  <strong><span class="addUser">Add new user</span></strong>
 </p>
 
 <ul>
