--- a/app/assets/javascripts/templates/userNew.jst.ejs
+++ b/app/assets/javascripts/templates/userNew.jst.ejs
@@ -1,7 +1,7 @@
 <div>
   <h1>Add A New User</h1>
     <strong>First Name:</strong>
-    <form action="" id="add-new-user">
+    <form action="/users" id="add-new-user">
       <input type="text" placeholder="First Name" id="firstName" value="" data-field-name="firstName">
       <strong>Last Name:</strong>
       <input type="text" placeholder="Last Name" id="lastName" value="" data-field-name="lastName">
