--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -84,7 +84,7 @@ ul {
 }
 
 .sortable {
-  background-image: url(../images/sort-arrows.png);
+  background-image: image-url("sort-arrows.png");
   width: 20px;
   height: 35px;
   cursor: move;
@@ -156,7 +156,7 @@ ul.skill-list li {
 .skill .delete {
   display: inline-block;
   text-indent: -9999px;
-  background: transparent url("../images/remove-button.png") no-repeat 0px 0px;
+  background: transparent image-url("remove-button.png") no-repeat 0px 0px;
   width: 17px;
   height: 17px;
   cursor:pointer;
@@ -167,7 +167,7 @@ ul.skill-list li {
 }
 
 .add-skill {
-  background: transparent url("../images/add-button.png");
+  background: transparent image-url("add-button.png");
   text-indent: -9999px;
   display: inline-block;
   width: 25px;
@@ -179,7 +179,7 @@ ul.skill-list li {
   width: 27px;
   height: 27px;
   text-indent: -9999px;
-  background: transparent url("../images/delete-icons.png") no-repeat;
+  background: transparent image-url("delete-icons.png") no-repeat;
   cursor: pointer;
   margin-left: 870px;
 }
