--- a/app/assets/javascripts/templates/userNew.jst.ejs
+++ b/app/assets/javascripts/templates/userNew.jst.ejs
@@ -1,16 +1,17 @@
 <div>
   <h1>Add A New User</h1>
+  <form action="/users" accept-charset="UTF-8" data-remote="true" method="POST" id="add-new-user">
+    <input name="utf8" value="✓" type="hidden">
     <strong>First Name:</strong>
-    <form action="/users" id="add-new-user">
-      <input type="text" placeholder="First Name" id="firstName" value="" data-field-name="firstName">
+      <input type="text" placeholder="First Name" id="firstName" value="" name="user[first_name]" data-field-name="firstName">
       <strong>Last Name:</strong>
-      <input type="text" placeholder="Last Name" id="lastName" value="" data-field-name="lastName">
+      <input type="text" placeholder="Last Name" id="lastName" value="" name="user[last_name]" data-field-name="lastName">
       <strong>Image URL:</strong>
-      <input type="text" placeholder="Image URL" id="imageUrl" value="" data-field-name="imageUrl">
+      <input type="text" placeholder="Image URL" id="imageUrl" value="" name="user[image_url]" data-field-name="imageUrl">
       <strong>Biography:</strong>
-      <input type="text" placeholder="Biography" id="bio" value="" data-field-name="bio">
+      <input type="text" placeholder="Biography" id="bio" value="" name="user[bio]" data-field-name="bio">
       <strong>Mission:</strong>
-      <input type="text" placeholder="Mission" id="mission" value="" data-field-name="mission">
-      <input type="submit" value="submit" class="submit">
-    </form>
+      <input type="text" placeholder="Mission" id="mission" value="" name="user[mission]" data-field-name="mission">
+    <input type="submit" name="commit" value="submit" class="submit">
+  </form>
 </div>
