Users can now follow one another

--- a/app/assets/javascripts/templates/user.jst.ejs
+++ b/app/assets/javascripts/templates/user.jst.ejs
@@ -24,3 +24,10 @@
 </form>
 <section id="projects"></section>
 
+
+<div id="followers" style="clear: left; padding: 1em;">
+  <h3>Followers</h3>
+  <div id="follower-list">
+  </div>
+  <button id="add-follower">Follow this user</button>
+</div>
